--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,7 +31,11 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  fluent_ui: ^4.4.2
+  firedart: ^0.9.0+1
+  firebase_core: ^2.12.0
+  cloud_firestore: ^4.7.0
+  csv: ^5.0.0
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -71,6 +75,7 @@ flutter:
     - assets/sample.mp3
     - assets/
     - assets/hearico.png
+    - assets/podcastdata.csv
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
